# study

./: .gitattributes  .gitignore  2025.6.21.txt  README.md  clean_git.sh  markdownstudy.md  python字体变色.txt  text.txt  散华辅助脚本(无动态UI).Q  新编WIN32API大全（中文）.chm.lnk  日志历程.txt  样式表采集.txt  通用配置文件格式.md
AI/飞书/原商品编码替换为商品编码（仓库填）/: data.xlsx  pyproject.toml  使用说明书.md  原商品编码替换为商品编码（仓库填）.py  原商品编码替换为商品编码（仓库填）.spec  日志记录.txt  需求规格说明书.md
AI/飞书/拼多多商家后台RPA/: PRPAS.py  README.md  _test.py  data.xlsx  pyproject.toml
AI/飞书/拼多多商家后台RPA/data_models/: __init__.py  config_model.py
AI/飞书/拼多多商家后台RPA/user_data/: logging_config.yaml
FastAPI学习/个人框架/: .gitignore  README.md  _test.py  pyproject.toml  requirements.txt  主入口模板.py  功能测试模板.py
FastAPI学习/个人框架/config/: .env  settings.toml
FastAPI学习/个人框架/data_models/: __init__.py  config_model.py
FastAPI学习/个人框架/debug_data/: user_settings.toml
FastAPI学习/个人框架/user_data/: user_settings.toml
FastAPI学习/个人框架/utils/: __init__.py  config_manager.py  message_util.py  path_utils.py  qrcode_manager.py
FastAPI学习/邮件发送系统/: README.md  main.py  main.spec  pyproject.toml
FastAPI学习/邮件发送系统/config/: settings.toml
FastAPI学习/邮件发送系统/data_models/: server_config.py
FastAPI学习/邮件发送系统/templates/: account_welcome.html  email_change.html  login_alert.html  newsletter.html  order_confirm.html  password_changed.html  password_reset.html  promo_batch.html  refund_status.html  ship_notify.html
FastAPI学习/邮件发送系统/templates/web_ui/index/: index.html
FastAPI学习/邮件发送系统/user_data/: email_tasks.db  user_settings.toml
FastAPI学习/邮件发送系统/utils/: __init__.py  email_dispatcher.py  email_task_db.py  message_util.py
FastAPI学习/邮件发送系统/文档/: 功能说明文档.md  技术设计文档.md  数据库设计文档.md  渲染模板类型.md  需求规格说明书.md  项目报告书.md
数据库/NoSQL/个人研究/mongodb_service/: _test.py  gallery-db-service.py  gallery-db-service.spec  main.py  main.spec  pyproject.toml  打包后整合到一个目录下.py  邮箱验证实现.md
数据库/NoSQL/个人研究/mongodb_service/data_models/: config_model.py  server_config.py
数据库/NoSQL/个人研究/mongodb_service/data_models/auth_model/: __init__.py  schemas.py
数据库/NoSQL/个人研究/mongodb_service/data_models/database/: __init__.py  browse.py  favorite.py  image.py  user.py
数据库/NoSQL/个人研究/mongodb_service/logger/: __init__.py  logger.py
数据库/NoSQL/个人研究/mongodb_service/service/database/: mongodb.py
数据库/NoSQL/个人研究/mongodb_service/services/auth/: __init__.py  dependencies.py  jwt.py  permissions.py  router.py  session_service.py  verification.py
数据库/NoSQL/个人研究/mongodb_service/services/browse/: __init__.py  router.py  service.py
数据库/NoSQL/个人研究/mongodb_service/services/database/: __init__.py  index_manager.py  (+2 more)
数据库/NoSQL/个人研究/mongodb_service/templates/: email_template.html  部分的报废的.html
数据库/NoSQL/个人研究/mongodb_service/utils/: config_manager.py  message_util.py  path_utils.py
(+2763 files in other folders)
