[project]
name = "1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "colorlog>=6.10.1",
    "fastapi[standard]>=0.136.3",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pyinstaller>=6.20.0",
    "python-dotenv>=1.2.2",
    "qrcode>=8.2",
    "uvicorn>=0.49.0",
]
