[project]
name = "email-sending-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beanie>=2.1.0",
    "colorlog>=6.10.1",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.136.3",
    "motor>=3.7.1",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pyinstall>=0.1.4",
    "pyinstaller>=6.20.0",
    "python-dotenv>=1.2.2",
    "qrcode>=8.2",
    "uvicorn>=0.49.0",
]
