[project]
name = "product-code-migration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "keyboard>=0.13.5",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "path",
    "pillow>=12.2.0",
    "pyinstaller>=6.21.0",
    "pyperclip>=1.11.0",
    "pystray>=0.19.5",
]
