[project]
name = "Pinduoduo-RPA-System"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "colorlog>=6.10.1",
    "fastapi[standard]>=0.138.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "pyinstaller>=6.21.0",
    "pytest-playwright>=0.8.0",
    "pyyaml>=6.0.3",
    "qrcode>=8.2",
]
