[project]
name = "mongodb-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beanie>=2.1.0",
    "colorlog>=6.10.1",
    "fastapi[standard]>=0.136.3",
    "motor>=3.7.1",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "redis>=8.0.0",
    "uvicorn>=0.49.0",
]
