[project]
name = "gallery-db-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "colorlog>=6.10.1",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.136.3",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pyinstaller>=6.20.0",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "qrcode>=8.2",
    "redis>=8.0.0",
    "uvicorn>=0.49.0",
]
